updating formating and adding comments